[project]
name = "memepool-cool"
version = "0.1.0"
description = "a bitcoin mempool explorer"
authors = [
    {name = "Jason Traub",email = "jtraub91@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "bits (>=0.2.1,<0.3.0)",
    "flask (>=3.1.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "memepool"}]


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
black = "^25.1.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
