[project]
name = "memepool-cool"
version = "0.1.0"
description = ""
authors = [
    {name = "Jason Traub",email = "jtraub91@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "bits @ git+https://github.com/jtraub91/bits.git@dev",
]

[tool.poetry]
packages = [{include = "memepool"}]


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
